--- a/doc/bugs/disable_sub-discussion_pages.mdwn
+++ b/doc/bugs/disable_sub-discussion_pages.mdwn
@@ -5,3 +5,8 @@ I do want discussion subpage, but I don't want to have, for example: discussion/
 
 > Discussion pages should clearly be a special case that don't get Discussion
 > links put at the top... aaand.. [[done]]! --[[Joey]]
+
+>>> Joey, I've just seen that you closed that bug in ikiwiki 1.37, but it seems
+>>> you fixed it only for English "discussion" page. The bug still occurs
+>>> for the international "discussion" pages. I have backported ikiwiki 1.40
+>>> and I can see "Dyskusja" link on my Polish "dyskusja" pages.
