web commit by http://ptecza.myopenid.com/: Apology for two commits

--- a/doc/bugs/disable_sub-discussion_pages.mdwn
+++ b/doc/bugs/disable_sub-discussion_pages.mdwn
@@ -10,3 +10,7 @@ I do want discussion subpage, but I don't want to have, for example: discussion/
 >>> you fixed it only for English "discussion" page. The bug still occurs
 >>> for the international "discussion" pages. I have backported ikiwiki 1.40
 >>> and I can see "Dyskusja" link on my Polish "dyskusja" pages. --Pawel
+
+>>> I'm so sorry for two commits, but first I clicked "Save Page" button
+>>> and next I clicked "Cancel" button, because I forgot about my signature :)
+>>> --Pawel
