* Added smileys for Moin Moin compatability.

--- a/basewiki/smileys.mdwn
+++ b/basewiki/smileys.mdwn
@@ -25,12 +25,16 @@ Just write the text of a smiley to display it.
 * \|-)	[[smileys/tired.png]]
 * \{OK}	[[smileys/thumbs-up.png]]
 * \{X}	[[smileys/icon-error.png]]
+* \{i}	[[smileys/icon-info.png]]
 * \(./)	[[smileys/checkmark.png]]
 * \(!)	[[smileys/idea.png]]
 * \[!]	[[smileys/attention.png]]
 * \/!\	[[smileys/alert.png]]
 * \{*}	[[smileys/star_on.png]]
 * \{o}	[[smileys/star_off.png]]
+* \{1} [[smileys/prio1.png]]
+* \{2} [[smileys/prio2.png]]
+* \{3} [[smileys/prio3.png]]
 
 For example: {*} B) {*}
 
