--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ ikiwiki (1.41) UNRELEASED; urgency=low
   * Gettext 1.04 or up is needed for the OO interface that ikiwiki needs,
     if an older version is installed, just don't gettext strings, instead of
     crashing.
+  * Added smileys for Moin Moin compatability.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 15 Jan 2007 22:19:02 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 18 Jan 2007 09:45:47 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
