* Fix handling of discussion links on discussion pages when l10n is used.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ikiwiki (1.41) UNRELEASED; urgency=low
     if an older version is installed, just don't gettext strings, instead of
     crashing.
   * Added smileys for Moin Moin compatability.
+  * Fix handling of discussion links on discussion pages when l10n is used.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 18 Jan 2007 09:45:47 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 18 Jan 2007 10:03:59 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
