--- a/doc/bugs/Changing_language.mdwn
+++ b/doc/bugs/Changing_language.mdwn
@@ -5,3 +5,5 @@ My $LANG was fr_FR.UTF-8 when I installed the 1.40 package. It didn't take it.
 How can I setup ikiwiki in order to display French (or German) translated string ?
 
 >Oups, sorry, it's ok, thanks, just in the setup file....
+
+>> Ok, marking this [[bugs/done]] --[[Joey]]
