--- a/doc/helponformatting.mdwn
+++ b/doc/helponformatting.mdwn
@@ -32,6 +32,21 @@ size of the header:
 ##### ##### h5
 ###### ###### h6
 
+You can also make the first two levels of heading by underlining text with
+equals or dash:
+
+heading 1
+=========
+
+    heading 1
+    =========
+
+heading 2
+---------
+
+    heading 2
+    ---------
+
 To create a horizontal rule, just write three or more dashes or stars on
 their own line:
 
