web commit by JoshTriplett: Avoid suggesting that only advanced users can use [[PreProcessorDirective]]s

--- a/doc/helponformatting.mdwn
+++ b/doc/helponformatting.mdwn
@@ -70,8 +70,7 @@ To link to any other web page, or to an email address, you can just put the url 
 
 ----
 
-Advanced users can use [[PreProcessorDirective]]s to do additional cool
-stuff.
+You can also use [[PreProcessorDirective]]s to do additional cool stuff.
 
 Also, if the smiley plugin is enabled in your wiki, you can insert
 [[smileys]] and some other useful symbols.
