web commit by JoshTriplett: Add fdolist shortcut.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -6,6 +6,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=deblist url="http://lists.debian.org/debian-%s" desc="debian-%s@lists.debian.org"]]
 * [[shortcut name=debpkg url="http://packages.debian.org/%s"]]
 * [[shortcut name=fdobug url="https://bugs.freedesktop.org/show_bug.cgi?id=%s" desc="freedesktop.org bug #%s"]]
+* [[shortcut name=fdolist url="http://lists.freedesktop.org/mailman/listinfo/%s" desc="%s@lists.freedesktop.org"]]
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 * [[shortcut name=iki url="http://ikiwiki.kitenet.net/%s.html"]]
 
