--- a/doc/bugs/disable_sub-discussion_pages.mdwn
+++ b/doc/bugs/disable_sub-discussion_pages.mdwn
@@ -46,3 +46,5 @@ I do want discussion subpage, but I don't want to have, for example: discussion/
 >>>>        make: *** [build-stamp] Error 2
 
 >>>> I think you should be notified about it :) --Pawel
+
+>>>>> You have an unresolved svn conflict in some files in po, looks like.
