--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -1,2 +1,5 @@
 In my sent post (without Polish characters in title, of course ;) ) I still
 can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
+
+> I don't know what post you're referring to, more details please.
+> --[[Joey]]
