web commit by http://getopenid.com/ptecza: Response

--- a/doc/bugs/i18n_characters_in_post_title.mdwn
+++ b/doc/bugs/i18n_characters_in_post_title.mdwn
@@ -8,3 +8,16 @@ I hope it's a bug, not a feature and you fix it soon :) --Pawel
 > need to be encoded in __code__ format, where "code" is the character
 > number. This is normally done for you, but if you're adding a page
 > manually, you need to handle it yourself. --[[Joey]]
+
+>> Assume I have my own blog and I want to send a new post with Polish
+>> characters in a title. I think it's totally normal and common thing
+>> in our times. Do you want to tell me I shouldn't use my native
+>> characters in the title? It can't be true ;)
+
+>> In my opinion encoding of title is a job for the wiki engine,
+>> not for me. Joey, please try to look at a problem from my point
+>> of view. I'm only user and I don't have to understand
+>> what the character number is. I only want to blog :)
+
+>> BTW, why don't you use the modified-UTF7 coding for page names
+>> as used in IMAP folder names with non-Latin letters? --Pawel
