web commit by http://getopenid.com/ptecza: Response

--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -3,3 +3,11 @@ can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
 
 > I don't know what post you're referring to, more details please.
 > --[[Joey]]
+
+>> Sorry for the laconic bug report. I meant my blog and the post I sent
+>> to it. It works exactly like your blog at bugs page and I also created it
+>> for my ikiwiki users to bug reporting :)
+
+>> So, I sent the post to my blog and I can see that "Discussion" link
+>> from `inlinepage.tmpl` file is not translated to Polish. Now I hope
+>> you know what I mean :) --Pawel
