web commit by hb

--- a/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
+++ b/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
@@ -21,3 +21,8 @@ Should it be documented ?
 >> works this way too, but I'm not sure. If you don't like editing pages "by hand" then maybe you should look at
 >> [[git]] or [[mercurial]] -- they should theoretically allow you to run apache on a working copy which is itself
 >> a branch of a working copy running on another machine, but I haven't used them so I don't know. --Ethan
+
+>>> Well, by hand editing is just what I'm making sometime. it's just using subversion, in fact.
+>>> But, yes, someone told me about git, which seems to allow what you are describing. In fact, my needs are typically
+>>> that I want to have 2 ikiwiki web-frontend on two (or more) different machines, with one machine sometimes off-line.
+>>> Imagine a team of auditor that want to report and collaborate on a wiki, but are not allways connected.
