--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -9,7 +9,18 @@ Note that for more formal bug reports or todo items, you can also edit the
 
 # Installation/Setup questions
 
-I ran into a problem when installing from svn.  I got "invalid variable interpolation" errors for Wrappers.pm.  I added the flag '--extract-all' to 'po/Makefile' and 'po/t' to the xgettext line.  Once I did that I was able to make and make test just fine.
+I ran into a problem when installing from svn.  I got "invalid variable
+interpolation" errors for Wrappers.pm.  I added the flag '--extract-all' to
+'po/Makefile' and 'po/t' to the xgettext line.  Once I did that I was able
+to make and make test just fine. --HarleyPig
+
+> It would be helpful if you could post the actual error message you saw.
+> Also would be nice to know what versions of perl and gettext you have.
+> Perhaps your xgettext is an older version from before it natively
+> supported perl.
+> Adding --extract-all doesn't seem like a good idea, since this causes it
+> to treat every string in the entire wiki as translatable. I don't know
+> what you're talking about regarding 'po/t'. --[[Joey]]
  
 I have just installed ikiwiki and it works - at least I have the example index.mdwn page
 compiled and visible.  However I have a few issues/problems:-
