web commit by http://getopenid.com/ptecza: What about my bug report?

--- a/doc/bugs/Discussion_link_not_translated_in_post.mdwn
+++ b/doc/bugs/Discussion_link_not_translated_in_post.mdwn
@@ -11,3 +11,5 @@ can see "Discussion" link, instead of Polish "Dyskusja" link. --Pawel
 >> So, I sent the post to my blog and I can see that "Discussion" link
 >> from `inlinepage.tmpl` file is not translated to Polish. Now I hope
 >> you know what I mean :) --Pawel
+
+>>> Joey, what about my bug report? ;) --Pawel
