web commit by http://getopenid.com/ptecza: What about my bug report?

--- a/doc/bugs/i18n_characters_in_post_title.mdwn
+++ b/doc/bugs/i18n_characters_in_post_title.mdwn
@@ -21,3 +21,6 @@ I hope it's a bug, not a feature and you fix it soon :) --Pawel
 
 >> BTW, why don't you use the modified-UTF7 coding for page names
 >> as used in IMAP folder names with non-Latin letters? --Pawel
+
+>>> Joey, do you intend to fix that bug or it's a feature
+>>> for you? ;) --Pawel
