--- a/doc/todo/shortcut_with_different_link_text.mdwn
+++ b/doc/todo/shortcut_with_different_link_text.mdwn
@@ -1,1 +1,6 @@
 I'd like the ability to use a shortcut, but declare an explicit link text rather than using the link text defined on [[/shortcuts]].  For example, if I create a shortcut "xcbgit" pointing to files in an XCB gitweb repository, I don't always want to use the path to the file as the link text; I would like to src/xcb.xsd, but use the link text "XML Schema for the X Window System protocol".
+
+> If I understand you correctly, you can use Markdown \[your link text\]\(the path or URL\) . Using your example:
+> [XML Schema for the X Window System protocol](src/xcb.xsd)
+>
+> If I don't understand this, can you give an HTML example? --reed
