web commit by JeremyReed: use my correct username here

--- a/doc/todo/shortcut_with_different_link_text.mdwn
+++ b/doc/todo/shortcut_with_different_link_text.mdwn
@@ -3,4 +3,4 @@ I'd like the ability to use a shortcut, but declare an explicit link text rather
 > If I understand you correctly, you can use Markdown \[your link text\]\(the path or URL\) . Using your example:
 > [XML Schema for the X Window System protocol](src/xcb.xsd)
 >
-> If I don't understand this, can you give an HTML example? --reed
+> If I don't understand this, can you give an HTML example? --[[JeremyReed]]
