web commit by JeremyReed: As of 1.37, you have to manually enable a rcs => "svn" etc to get it to use a revision control system. (I copied and pasted this log message from another wikipage :)

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -141,7 +141,7 @@ configuration options of their own.
   the web will be committed. Also, the [[RecentChanges]] link will be placed
   on pages.
 
-  svn is enabled by default.
+  No revision control is enabled by default.
 
 * --svnrepo /svn/wiki
 
