web commit by mornfall

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -37,6 +37,7 @@ Sites that are using ikiwiki include:
 * [Tales from the Gryphon](http://www.golden-gryphon.com/blog/manoj/), Manoj Srivastava's free software blog.
 * [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
 * [Proper Treatment 正當作法](http://conway.rutgers.edu/~ccshan/wiki/)
+* [lost scraps](http://web.mornfall.net), pages/blog of Petr Ročkai aka mornfall
 
 Please feel free to add your own ikiwiki site!
 
