web commit by RonanLeHy

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -2,7 +2,7 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
 
-Test. Проверка. テスト ığüşöçİ ทดสอบ
+Test. Проверка. テスト ığüşöçİ ทดสอบ éphémère
 
 Here's a paragraph.
 
