--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -1,6 +1,6 @@
 The ikiwiki logo *reflects* ikiwiki turning the regular wiki concept 
 on its head by being a wiki compiler. Or maybe just the fact that "ikiwiki"
-is an anagram. 
+is an palindrome. 
 
 Anyway, if you have this logo in other fonts or colors, feel free to send
 it to [[Joey]] for inclusion here. (Or upload it, once that feature is
