web commit by JoshTriplett: Use map to show list of users.

--- a/doc/users.mdwn
+++ b/doc/users.mdwn
@@ -3,3 +3,7 @@ See [[IkiwikiUsers]] for the list of sites using ikiwiki.
 Users of this wiki, feel free to create a subpage of this one and talk
 about yourself on it, within reason. You can link to it to sign your
 comments.
+
+List of users
+=============
+[[map pages="users/*"]]
