--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ ikiwiki (1.41) UNRELEASED; urgency=low
     crashing.
   * Added smileys for Moin Moin compatability.
   * Fix handling of discussion links on discussion pages when l10n is used.
+  * Make gitorigin_branch and gitmaster_branch configurable via the setup
+    file. Closes: #408599
 
- -- Joey Hess <joeyh@debian.org>  Thu, 18 Jan 2007 10:03:59 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 18:55:45 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
