--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ ikiwiki (1.41) UNRELEASED; urgency=low
   * Fix handling of discussion links on discussion pages when l10n is used.
   * Make gitorigin_branch and gitmaster_branch configurable via the setup
     file. Closes: #408599
+  * French translation update. Closes: #408593
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 18:55:45 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 18:56:49 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
