--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,11 @@ ikiwiki (1.41) UNRELEASED; urgency=low
   * Make gitorigin_branch and gitmaster_branch configurable via the setup
     file. Closes: #408599
   * French translation update. Closes: #408593
+  * Improve use of svn merge, by specifying the file to merge, rather than
+    chdiring to the srcdir (which wasn't right when merging in a subdir).
+    Thanks Ethan.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 18:56:49 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 19:01:27 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
