web commit by JoshTriplett: Typo fix: s/overrideen/overridden/.

--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -31,7 +31,7 @@ You can use any field names you like, but here are some predefined ones:
   Overrides the title of the page, which is generally the same as the
   page name.
 
-  Note that if the title is overrideen, a "title_overridden" variable will
+  Note that if the title is overridden, a "title_overridden" variable will
   be set to a true value in the template; this can be used to format things
   differently in this case.
 
