web commit by JoshTriplett

--- a/doc/todo/recentchanges.mdwn
+++ b/doc/todo/recentchanges.mdwn
@@ -22,3 +22,7 @@
   once, when it's created, and I imagine some people -- some deranged,
   obsessive-compulsive people like myself -- would like to know about the
   changes made to existing pages as well as newly-created pages.
+
+  > That would work rather well for pages like [[todo]] and [[bugs]], where
+  > you want to know about any updates, not just initial
+  > creation. --[[JoshTriplett]]
