--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,11 @@ ikiwiki (1.41) UNRELEASED; urgency=low
   * Improve use of svn merge, by specifying the file to merge, rather than
     chdiring to the srcdir (which wasn't right when merging in a subdir).
     Thanks Ethan.
+  * Always call rcs_update after a commit during a web edit, to work around
+    the problem described in bugs/svn_fails_to_update. Thanks to Ethan for the
+    analysis and patch.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 19:01:27 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 19:18:27 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
