--- a/doc/todo/recentchanges.mdwn
+++ b/doc/todo/recentchanges.mdwn
@@ -26,3 +26,5 @@
   > That would work rather well for pages like [[todo]] and [[bugs]], where
   > you want to know about any updates, not just initial
   > creation. --[[JoshTriplett]]
+
+  > Of course you can use email subscriptions for that too.. --[[Joey]]
