* Replace underscores in shortcut texts with spaces when formatting for   display. This allows using a shortcut like [[wikipedia War_of_1812]],   which links to the correct remote page, but is displayed nicely.

--- a/doc/bugs/shortcuts_don__39__t_escape_from_Markdown.mdwn
+++ b/doc/bugs/shortcuts_don__39__t_escape_from_Markdown.mdwn
@@ -3,3 +3,5 @@ to show up in italics, since underscores are Markdown for italics. Using
 [[wikipedia low frequency oscillation]] works in this case, because Wikipedia
 will redirect, but it's hardly clean. Maybe the shortcuts plugin should
 run pagetitle() on the text of its link? --Ethan
+
+> [[bugs/done]] --[[Joey]]
