--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,11 @@ ikiwiki (1.41) UNRELEASED; urgency=low
   * Always call rcs_update after a commit during a web edit, to work around
     the problem described in bugs/svn_fails_to_update. Thanks to Ethan for the
     analysis and patch.
+  * Replace underscores in shortcut texts with spaces when formatting for
+    display. This allows using a shortcut like [[wikipedia War_of_1812]],
+    which links to the correct remote page, but is displayed nicely.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 19:18:27 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Jan 2007 19:59:58 -0500
 
 ikiwiki (1.40) unstable; urgency=low
 
