--- a/doc/plugins/shortcut.mdwn
+++ b/doc/plugins/shortcut.mdwn
@@ -5,7 +5,7 @@ This plugin allows external links to commonly linked to sites to be made
 more easily using shortcuts. Some examples of using shortcuts include:
 
 	\[[google foo]]
-	\[[wikipedia War of 1812]]
+	\[[wikipedia War_of_1812]]
 	\[[debbug 12345]]
 
 The available shortcuts are defined on the [[shortcuts]] page in
