--- a/doc/todo/shortcut_with_different_link_text.mdwn
+++ b/doc/todo/shortcut_with_different_link_text.mdwn
@@ -31,3 +31,13 @@ Window System protocol".  --[[JoshTriplett]]
 >>> [[the_shortcuts_on_this_wiki|shortcuts]]. (The order you suggest, with the
 >>> preprocessor directive first, seems quite confusing since wikilinks work
 >>> the other way around.) --[[JoshTriplett]]
+
+> How about \[[xcbgit XML_Schema|src/xcb.xsd]]. That's the same way round
+> as a wikilink, if you look at it the right way. The syntax Josh suggests
+> is not currently possible in ikiwiki.
+> 
+> However.. [[Short_wikilinks]] has some similar objectives in a way, and
+> over there a similar syntax to what Josh proposes was suggested. So maybe
+> I should modify how ikiwiki preprocessors work to make it doable.
+> Although, I seem to have come up with a clear alternative syntax over
+> there. --[[Joey]]
